--- a/Design_Mockup.html
+++ b/Design_Mockup.html
@@ -21,7 +21,7 @@
             <hr />
           </div>
         </div>
-        <div class="row">
+        <div class="row">           <!-- The main pic & the body below it -->
           <div class="col-md-12">
             <img class="img-responsive" src="dammam.jpg" alt="Ashri3a img">
           </div>
