--- a/Design_Mockup.html
+++ b/Design_Mockup.html
@@ -3,14 +3,14 @@
   <head><title>Dammam City</title>
     <meta name="viewport" content="width=device-width, intitial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <!-- <link rel="stylesheet" type="text/css" href="responsive.css"> -->
   </head>
   <body>
     <div class="container">
       <div class="row topBar">       <!-- logo & Title-->
-          <div class="col-md-6"><img class="logo" src="Ashri3a.png" alt="Ashri3a" width=100px height=70px></div>
+          <div class="col-md-6"><img class="logo" src="images/Ashri3a.png" alt="Ashri3a" width=100px height=70px></div>
           <div class="col-md-6 text-right text-uppercase">
             <h1 class="text-thin">Dammam City</h1>
             <h3>Down Town</h3>
@@ -23,7 +23,7 @@
         </div>
         <div class="row">           <!-- The main pic & the body below it -->
           <div class="col-md-12">
-            <img class="img-responsive" src="dammam.jpg" alt="Ashri3a img">
+            <img class="img-responsive" src="images/dammam.jpg" alt="Ashri3a img">
           </div>
         </div>
         <div class="row">
@@ -33,15 +33,15 @@
         </div>
         <div class="row minImg text-center">
           <div class="col-md-4">
-            <img class="img-responsive" src="island.jpg" alt="img01" >
+            <img class="img-responsive" src="images/island.jpg" alt="img01" >
             <h3> <a href="http://google.com">Island01</a></h3>
           </div>
           <div class="col-md-4">
-            <img class="img-responsive" src="island.jpg" alt="img02" >
+            <img class="img-responsive" src="images/island.jpg" alt="img02" >
             <h3> <a href="http://google.com">Island02</a></h3>
           </div>
           <div class="col-md-4">
-            <img class="img-responsive" src="island.jpg" alt="img03" >
+            <img class="img-responsive" src="images/island.jpg" alt="img03" >
             <h3> <a href="http://google.com">Island03</a></h3>
           </div>
         </div>
